fixed size of header on smaller screen, wouldn't fit previously

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,7 +96,7 @@ h4{
 
 @media only screen and (max-width:480px){
   .jumbotron h1{
-    font-size: 5.7rem;
+    font-size: 4rem;
   }
 }
 
